# server/internal/proto/api/file/service.swagger.json
@@ -309,14 +309,8 @@
         },
         "parameters": [
           {
-            "name": "pageNum",
-            "in": "query",
-            "required": false,
-            "type": "integer",
-            "format": "int32"
-          },
-          {
-            "name": "pageToken",
+            "name": "filter",
+            "description": "This is a request variable of the map type. The query format is \"map_name[key]=value\", e.g. If the map name is Age, the key type is string, and the value type is integer, the query parameter is expressed as Age[\"bob\"]=18",
             "in": "query",
             "required": false,
             "type": "string"
@@ -630,15 +624,11 @@
     "fileListFilesRequest": {
       "type": "object",
       "properties": {
-        "pageNum": {
-          "type": "integer",
-          "format": "int32"
-        },
-        "pageToken": {
-          "type": "string"
-        },
-        "path": {
-          "type": "string"
+        "filter": {
+          "type": "object",
+          "additionalProperties": {
+            "type": "string"
+          }
         }
       }
     },
